@@ -34,6 +34,9 @@ Changes in stable release 2.4.6 (not released yet)
 
 * Fixed an FvwmScript compile problem on dec-osf5.
 
+* The window handles are now resizes as they should when the
+  HandleWidth style changes.
+
 Changes in stable release 2.4.5 (27-Jan-2002)
 
 * Fixed minor problems in popping sub menus up and down.
