@@ -4,6 +4,11 @@
 	(MyWarpPointer):
 	fixed a compile problem on dec-osf5
 
+	* fvwm/add_window.c (resize_resize_handle_windows):
+	(change_resize_handle_windows):
+	(setup_window_font):
+	fixed changing the handlewidth style
+
 2002-03-03  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/conditional.c (CMD_Pick):
